@@ -2214,7 +2214,9 @@ bool CApplication::OnKey(CKey& key)
   {
     if (IsPlaying() && m_pPlayer->SkipNext())
       return true;
+
     g_playlistPlayer.PlayNext();
+    
     return true;
   }
 
@@ -3143,10 +3145,10 @@ bool CApplication::PlayFile(const CFileItem& item, bool bRestart)
     }
 
     // Enable Karaoke voice as necessary
-    if (g_guiSettings.GetBool("Karaoke.VoiceEnabled"))
+//    if (g_guiSettings.GetBool("Karaoke.VoiceEnabled"))
+  //  {
+    if (item.IsAudio() && !item.IsInternetStream() && g_guiSettings.GetBool("Karaoke.Enabled"))
     {
-//    if (item.IsAudio() && !item.IsInternetStream() && g_guiSettings.GetBool("Karaoke.Enabled"))
-//    {
       if (item.IsMusicDb())
         m_CdgParser.Start(item.m_musicInfoTag.GetURL());
       else
